Initialized project with tamagui and expo

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,7 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+/.idea/ai-task-manager.iml
+/.idea/modules.xml
+/.idea/inspectionProfiles/Project_Default.xml
+/.idea/vcs.xml
