--- a/.gitignore
+++ b/.gitignore
@@ -31,10 +31,15 @@ yarn-error.*
 *.pem
 
 # local env files
-.env*.local
+.env.local
+.env
 
 # typescript
 *.tsbuildinfo
+
+# prisma gen and mig files
+prisma/generated/
+prisma/migration_lock.toml
 
 app-example
 /.idea/ai-task-manager.iml
@@ -42,3 +47,6 @@ app-example
 /.idea/inspectionProfiles/Project_Default.xml
 /.idea/vcs.xml
 /.idea/biome.xml
+
+
+/prisma/migrations/migration_lock.toml
