--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@prisma/client": "^6.9.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -45,6 +46,7 @@
     "@babel/core": "^7.25.2",
     "@biomejs/biome": "1.9.4",
     "@types/react": "~19.0.10",
+    "prisma": "^6.9.0",
     "typescript": "~5.8.3"
   },
   "private": true
