--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@clerk/clerk-expo": "^2.13.0",
     "@expo/vector-icons": "^14.1.0",
     "@prisma/client": "^6.9.0",
     "@react-native-async-storage/async-storage": "2.1.2",
@@ -22,6 +23,7 @@
     "@tamagui/config": "^1.126.14",
     "dayjs": "^1.11.13",
     "expo": "~53.0.9",
+    "expo-auth-session": "^6.2.0",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
@@ -29,6 +31,7 @@
     "expo-image": "^2.2.0",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.0.7",
+    "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
