Task Creation now works and creates tasks to db with user. Resolved console errors. Refactored auth to not use hooks and use getClerkInstance.

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "clean": "rm -rf ./node_modules",
     "clean-install": "rm -rf ./node_modules && yarn install",
+    "reset-db":  "npx prisma db push --force-reset",
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "DARK_MODE=media expo start --android",
@@ -32,7 +33,7 @@
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "^8.4.1",
+    "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
@@ -45,9 +46,9 @@
     "expo-constants": "~17.1.6",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "^2.2.0",
+    "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
-    "expo-router": "~5.0.7",
+    "expo-router": "~5.1.0",
     "expo-secure-store": "^14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -62,10 +63,10 @@
     "react-native": "^0.79.3",
     "react-native-css-interop": "^0.1.22",
     "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "^3.18.0",
-    "react-native-safe-area-context": "^5.4.1",
+    "react-native-reanimated": "~3.17.4",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
-    "react-native-svg": "15.2.0",
+    "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
