Refactored ListViewBoxes and Create Task in to differnt components. Updated schema to be dates vs strings. Added more apis such as deleting tasks.

--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@gluestack-ui/form-control": "^0.1.19",
     "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/input": "^0.1.38",
+    "@gluestack-ui/modal": "^0.1.41",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
     "@gluestack-ui/radio": "^0.1.40",
     "@gluestack-ui/select": "^0.1.31",
+    "@gluestack-ui/switch": "^0.1.29",
     "@gluestack-ui/textarea": "^0.1.25",
     "@gluestack-ui/toast": "^1.0.9",
     "@legendapp/motion": "^2.4.0",
