--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@sentry/react-native": "^6.15.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "dayjs": "^1.11.13",
     "expo": "~53.0.9",
