--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rneui/themed": "^4.0.0-rc.8",
+    "@sentry/cli": "^2.46.0",
     "@sentry/react-native": "^6.15.1",
     "babel-plugin-module-resolver": "^5.0.2",
     "dayjs": "^1.11.13",
@@ -53,11 +54,12 @@
     "expo-image": "~2.3.0",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
-    "expo-secure-store": "^14.2.3",
+    "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
+    "expo-updates": "~0.28.14",
     "expo-web-browser": "~14.1.6",
     "express": "^5.1.0",
     "lucide-react-native": "^0.514.0",
