Added conditional rendering on form based on if task is automatic or manual. Refactored api and actions to only take manual inputs for now. Working. Installed HeroUI for web usage.

--- a/package.json
+++ b/package.json
@@ -31,9 +31,16 @@
     "@gluestack-ui/switch": "^0.1.29",
     "@gluestack-ui/textarea": "^0.1.25",
     "@gluestack-ui/toast": "^1.0.9",
+    "@heroui/date-input": "^2.3.21",
+    "@heroui/date-picker": "^2.3.22",
+    "@heroui/number-input": "^2.0.12",
+    "@heroui/system": "2.4.18",
+    "@heroui/theme": "2.4.17",
+    "@internationalized/date": "3.8.2",
     "@legendapp/motion": "^2.4.0",
     "@prisma/client": "^6.9.0",
     "@prisma/extension-accelerate": "^2.0.1",
+    "@react-aria/i18n": "3.12.10",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
@@ -62,7 +69,9 @@
     "expo-updates": "~0.28.14",
     "expo-web-browser": "~14.1.6",
     "express": "^5.1.0",
+    "framer-motion": "12.19.2",
     "lucide-react-native": "^0.514.0",
+    "motion": "^12.19.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -83,6 +92,7 @@
     "@babel/core": "^7.25.2",
     "@biomejs/biome": "1.9.4",
     "@types/react": "~19.0.10",
+    "@types/react-native": "^0.73.0",
     "jscodeshift": "0.15.2",
     "prisma": "^6.9.0",
     "typescript": "~5.8.3"
