--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@sentry/cli": "^2.46.0",
     "@sentry/react-native": "^6.15.1",
     "babel-plugin-module-resolver": "^5.0.2",
+    "date-fns": "^4.1.0",
+    "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
     "expo": "~53.0.9",
     "expo-auth-session": "^6.2.0",
