--- a/package.json
+++ b/package.json
@@ -50,6 +50,8 @@
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/cli": "^2.46.0",
     "@sentry/react-native": "^6.15.1",
+    "@tanstack/react-query": "^5.83.0",
+    "axios": "^1.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
