--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "express": "^5.1.0",
     "framer-motion": "12.19.2",
     "lucide-react-native": "^0.514.0",
+    "luxon": "^3.7.1",
     "motion": "^12.19.2",
     "nativewind": "^4.1.23",
     "react": "19.0.0",
@@ -96,6 +97,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@biomejs/biome": "1.9.4",
+    "@types/luxon": "^3.6.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
     "jscodeshift": "0.15.2",
