--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "lint": "expo lint"
   },
   "dependencies": {
+    "@babel/plugin-proposal-export-namespace-from": "^7.18.9",
     "@clerk/clerk-expo": "^2.13.0",
     "@expo/html-elements": "0.4.2",
     "@expo/vector-icons": "^14.1.0",
@@ -84,14 +85,15 @@
     "react-hook-form": "^7.57.0",
     "react-native": "^0.79.3",
     "react-native-css-interop": "^0.1.22",
-    "react-native-gesture-handler": "~2.24.0",
-    "react-native-reanimated": "~3.17.4",
+    "react-native-gesture-handler": "^2.27.2",
+    "react-native-reanimated": "^4.0.0",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
+    "react-native-worklets": "^0.4.0",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
@@ -104,5 +106,6 @@
     "prisma": "^6.9.0",
     "typescript": "~5.8.3"
   },
-  "private": true
+  "private": true,
+  "proxy": "http://localhost:8081"
 }
