--- a/app.json
+++ b/app.json
@@ -47,7 +47,8 @@
           "organization": "timex-4k"
         }
       ],
-      "expo-secure-store"
+      "expo-secure-store",
+      "expo-web-browser"
     ],
     "experiments": {
       "typedRoutes": true
