--- a/package.json
+++ b/package.json
@@ -44,13 +44,14 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "@react-aria/i18n": "3.12.10",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.3.0",
+    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "@rneui/themed": "^4.0.0-rc.8",
     "@sentry/cli": "^2.46.0",
-    "@sentry/react-native": "^6.15.1",
+    "@sentry/react-native": "~6.14.0",
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
@@ -64,7 +65,7 @@
     "expo-dev-client": "~5.2.0",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.3.0",
+    "expo-image": "~2.4.0",
     "expo-linking": "~7.1.5",
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
@@ -73,7 +74,7 @@
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
     "expo-updates": "~0.28.14",
-    "expo-web-browser": "~14.1.6",
+    "expo-web-browser": "~14.2.0",
     "express": "^5.1.0",
     "framer-motion": "12.19.2",
     "lucide-react-native": "^0.514.0",
@@ -85,9 +86,9 @@
     "react-hook-form": "^7.57.0",
     "react-native": "^0.79.3",
     "react-native-css-interop": "^0.1.22",
-    "react-native-gesture-handler": "^2.27.2",
+    "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "^4.0.0",
-    "react-native-safe-area-context": "4.12.0",
+    "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-url-polyfill": "^2.0.0",
