--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "@prisma/extension-accelerate": "^2.0.1",
     "@react-aria/i18n": "3.12.10",
     "@react-native-async-storage/async-storage": "2.1.2",
-    "@react-native-community/datetimepicker": "8.4.1",
+    "@react-native-community/datetimepicker": "^8.4.2",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
@@ -77,6 +77,7 @@
     "expo-web-browser": "~14.2.0",
     "express": "^5.1.0",
     "framer-motion": "12.19.2",
+    "http-status-codes": "^2.3.0",
     "lucide-react-native": "^0.514.0",
     "luxon": "^3.7.1",
     "motion": "^12.19.2",
