--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
     "babel-plugin-module-resolver": "^5.0.2",
+    "cors": "^2.8.5",
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
@@ -101,6 +102,8 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@biomejs/biome": "1.9.4",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^5.0.3",
     "@types/luxon": "^3.6.2",
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
