--- a/app.json
+++ b/app.json
@@ -29,7 +29,12 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router",
+      [
+        "expo-router",
+        {
+          "origin": "https://taskdone.expo.app"
+        }
+      ],
       [
         "expo-splash-screen",
         {
