--- a/package.json
+++ b/package.json
@@ -58,6 +58,7 @@
     "date-fns": "^4.1.0",
     "date-fns-tz": "^3.2.0",
     "dayjs": "^1.11.13",
+    "dotenv": "^17.2.1",
     "expo": "^53.0.20",
     "expo-auth-session": "^6.2.0",
     "expo-blur": "~14.1.4",
