--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
     "react-native-web": "~0.20.0",
     "react-native-webview": "13.13.5",
     "react-native-worklets": "^0.4.0",
+    "react-server-dom-webpack": "~19.0.0",
     "tailwindcss": "3.4.17"
   },
   "devDependencies": {
