Configured project and apis to work on dev environment. Need to fix prod env vars.

--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,9 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env
+# env files
+.env.development
+.env.preview
 .env.production
 
 # typescript
