--- a/package.json
+++ b/package.json
@@ -3,11 +3,12 @@
   "main": "expo-router/entry",
   "version": "1.0.0",
   "scripts": {
-    "dev": "expo start",
+    "dev": "APP_VARIANT=development npx expo start",
     "clean": "rm -rf ./node_modules && rm -rf ./yarn.lock",
     "clean-install": "yarn clean && yarn install",
     "reset-db": "npx prisma db push --force-reset",
     "start": "expo start",
+    "clear-start" : "expo start --clear",
     "reset-project": "node ./scripts/reset-project.js",
     "android": "DARK_MODE=media expo start --android",
     "ios": "DARK_MODE=media expo start --ios",
@@ -62,8 +63,8 @@
     "expo": "^53.0.20",
     "expo-auth-session": "^6.2.0",
     "expo-blur": "~14.1.4",
-    "expo-constants": "~17.1.6",
-    "expo-dev-client": "~5.2.0",
+    "expo-constants": "~17.1.7",
+    "expo-dev-client": "~5.2.4",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.4.0",
