--- a/.vercel/project.json
+++ b/.vercel/project.json
@@ -1,1 +1,4 @@
-{"projectId":"prj_a2tAetVfvQi5FX1jYd0UnKVqME2j","orgId":"team_AH8sdUnbhuRCyw4UTk1R1JqW"}
+{
+	"projectId": "prj_a2tAetVfvQi5FX1jYd0UnKVqME2j",
+	"orgId": "team_AH8sdUnbhuRCyw4UTk1R1JqW"
+}
