--- a/package.json
+++ b/package.json
@@ -89,6 +89,7 @@
 		"react-hook-form": "^7.57.0",
 		"react-native": "^0.79.3",
 		"react-native-css-interop": "^0.1.22",
+		"react-native-draggable": "^3.3.0",
 		"react-native-gesture-handler": "~2.24.0",
 		"react-native-reanimated": "~3.17.4",
 		"react-native-safe-area-context": "5.4.0",
