--- a/eas.json
+++ b/eas.json
@@ -7,9 +7,12 @@
 		"development": {
 			"developmentClient": true,
 			"distribution": "internal",
-			"ios": {
-				"simulator": true
-			},
+          },
+      "ios-simulator": {
+        "extends": "development",
+        "ios": {
+          "simulator": true
+        },
 			"env": {
 				"APP_VARIANT": "development"
 			}
