--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
 		"nativewind": "^4.1.23",
 		"react": "19.0.0",
 		"react-dom": "19.0.0",
+		"react-gesture-handler": "^0.0.5",
 		"react-hook-form": "^7.57.0",
 		"react-native": "^0.79.3",
 		"react-native-css-interop": "^0.1.22",
