--- a/package.json
+++ b/package.json
@@ -18,7 +18,10 @@
 	},
 	"dependencies": {
 		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
+		"@clerk/backend": "^2.17.2",
 		"@clerk/clerk-expo": "^2.13.0",
+		"@clerk/clerk-sdk-node": "clerk/clerk-sdk-node",
+		"@clerk/express": "^1.7.37",
 		"@expo/html-elements": "0.4.2",
 		"@expo/vector-icons": "^14.1.0",
 		"@gluestack-ui/actionsheet": "^0.2.53",
@@ -55,6 +58,7 @@
 		"@tanstack/react-query": "^5.83.0",
 		"axios": "^1.11.0",
 		"babel-plugin-module-resolver": "^5.0.2",
+		"cors": "^2.8.5",
 		"date-fns": "^4.1.0",
 		"date-fns-tz": "^3.2.0",
 		"dayjs": "^1.11.13",
@@ -105,6 +109,7 @@
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
 		"@biomejs/biome": "2.0.6",
+		"@types/cors": "^2.8.19",
 		"@types/express": "^5.0.3",
 		"@types/luxon": "^3.6.2",
 		"@types/react": "~19.0.10",
