--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
 		"ios": "DARK_MODE=media expo start --ios",
 		"web": "DARK_MODE=media expo start --web",
 		"lint": "expo lint",
-		"einstall": "npx expo install"
+		"einstall": "npx expo install",
+        "vercel-build": "expo export"
+
 	},
 	"dependencies": {
 		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
