--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
 		"web": "DARK_MODE=media expo start --web",
 		"lint": "expo lint",
 		"einstall": "npx expo install",
-        "prisma:generate": "prisma generate",
-        "build": "expo export -p web --output-dir dist",
-        "vercel-build": "expo export -p web --output-dir dist"
-    },
+		"prisma:generate": "prisma generate",
+		"build": "expo export -p web --output-dir dist",
+		"vercel-build": "expo export -p web --output-dir dist"
+	},
 	"dependencies": {
 		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
 		"@clerk/clerk-expo": "^2.13.0",
@@ -103,6 +103,7 @@
 		"react-native-web": "~0.20.0",
 		"react-native-webview": "13.13.5",
 		"react-server-dom-webpack": "~19.0.0",
+		"serverless-http": "^4.0.0",
 		"tailwindcss": "3.4.17"
 	},
 	"devDependencies": {
