--- a/app.json
+++ b/app.json
@@ -57,7 +57,7 @@
 		],
 		"experiments": {
 			"typedRoutes": true,
-			"reactServerFunctions": true
+			"reactServerFunctions": false
 		},
 		"extra": {
 			"router": {},
