--- a/package.json
+++ b/package.json
@@ -102,7 +102,7 @@
 		"react-native-url-polyfill": "^2.0.0",
 		"react-native-web": "~0.20.0",
 		"react-native-webview": "13.13.5",
-		"react-server-dom-webpack": "~19.0.0",
+		"react-native-worklets": "^0.6.1",
 		"serverless-http": "^4.0.0",
 		"tailwindcss": "3.4.17"
 	},
