--- a/package.json
+++ b/package.json
@@ -62,7 +62,7 @@
 		"date-fns-tz": "^3.2.0",
 		"dayjs": "^1.11.13",
 		"depcheck": "^1.4.7",
-		"expo": "^53.0.20",
+		"expo": "^54.0.13",
 		"expo-auth-session": "^6.2.0",
 		"expo-blur": "~14.1.4",
 		"expo-constants": "~17.1.7",
@@ -86,8 +86,8 @@
 		"luxon": "^3.7.1",
 		"motion": "^12.19.2",
 		"nativewind": "^4.1.23",
-		"react": "19.0.0",
-		"react-dom": "19.0.0",
+		"react": "^19.2.0",
+		"react-dom": "^19.2.0",
 		"react-gesture-handler": "^0.0.5",
 		"react-hook-form": "^7.57.0",
 		"react-native": "^0.79.3",
