--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
 		"prisma:generate": "prisma generate",
 		"build": "expo export -p web --output-dir dist",
 		"studio": "dotenv -e .env.development -- npx prisma studio",
-		"vercel-build": "expo export -p web --output-dir dist"
+		"vercel-build": "expo export -p web --output-dir dist",
+		"test": "jest --watchAll"
 	},
 	"dependencies": {
 		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
@@ -111,10 +112,14 @@
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
 		"@biomejs/biome": "2.0.6",
+		"@testing-library/react-native": "^13.3.3",
 		"@types/express": "^5.0.3",
+		"@types/jest": "29.5.14",
 		"@types/luxon": "^3.6.2",
 		"@types/react": "~19.0.10",
 		"dotenv-cli": "^10.0.0",
+		"jest": "~29.7.0",
+		"jest-expo": "~54.0.12",
 		"jscodeshift": "0.15.2",
 		"prisma": "^6.9.0",
 		"typescript": "^5.9.2"
@@ -125,6 +130,9 @@
 				"listUnknownPackages": false
 			}
 		}
+	},
+	"jest": {
+		"preset": "jest-expo"
 	},
 	"private": true,
 	"proxy": "http://localhost:8081"
