Removed all glustack configuration

--- a/package.json
+++ b/package.json
@@ -24,28 +24,14 @@
 	"dependencies": {
 		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
 		"@clerk/clerk-expo": "^2.13.0",
-		"@expo/html-elements": "0.4.2",
+		"@expo/html-elements": "^0.10.1",
 		"@expo/vector-icons": "^14.1.0",
-		"@gluestack-ui/actionsheet": "^0.2.53",
-		"@gluestack-ui/button": "^1.0.14",
-		"@gluestack-ui/checkbox": "^0.1.39",
-		"@gluestack-ui/form-control": "^0.1.19",
-		"@gluestack-ui/icon": "^0.1.27",
-		"@gluestack-ui/input": "^0.1.38",
-		"@gluestack-ui/modal": "^0.1.41",
-		"@gluestack-ui/nativewind-utils": "^1.0.26",
-		"@gluestack-ui/overlay": "^0.1.22",
-		"@gluestack-ui/radio": "^0.1.40",
-		"@gluestack-ui/select": "^0.1.31",
-		"@gluestack-ui/switch": "^0.1.29",
-		"@gluestack-ui/textarea": "^0.1.25",
-		"@gluestack-ui/toast": "^1.0.9",
 		"@heroui/date-input": "^2.3.21",
 		"@heroui/date-picker": "^2.3.22",
 		"@heroui/system": "2.4.18",
 		"@heroui/theme": "2.4.17",
 		"@internationalized/date": "3.8.2",
-		"@legendapp/motion": "^2.4.0",
+		"@legendapp/motion": "^2.3.0",
 		"@prisma/client": "^6.9.0",
 		"@prisma/extension-accelerate": "^2.0.1",
 		"@react-aria/i18n": "3.12.10",
@@ -90,6 +76,7 @@
 		"nativewind": "^4.1.23",
 		"openai": "^6.5.0",
 		"react": "^19.2.0",
+		"react-aria": "^3.33.0",
 		"react-dom": "^19.2.0",
 		"react-gesture-handler": "^0.0.5",
 		"react-hook-form": "^7.57.0",
@@ -98,16 +85,18 @@
 		"react-native-draggable": "^3.3.0",
 		"react-native-gesture-handler": "~2.24.0",
 		"react-native-pager-view": "6.7.1",
-		"react-native-reanimated": "~3.17.4",
-		"react-native-safe-area-context": "5.4.0",
+		"react-native-reanimated": "~4.1.0",
+		"react-native-safe-area-context": "^5.6.1",
 		"react-native-screens": "~4.11.1",
-		"react-native-svg": "15.11.2",
+		"react-native-svg": "^15.13.0",
 		"react-native-url-polyfill": "^2.0.0",
 		"react-native-web": "~0.20.0",
 		"react-native-webview": "13.13.5",
-		"react-native-worklets": "^0.6.1",
+		"react-native-worklets": "^0.5.1",
+		"react-stately": "^3.39.0",
 		"serverless-http": "^4.0.0",
-		"tailwindcss": "3.4.17"
+		"tailwind-variants": "^0.1.20",
+		"tailwindcss": "^3.4.17"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
