--- a/package.json
+++ b/package.json
@@ -26,6 +26,8 @@
 		"@clerk/clerk-expo": "^2.13.0",
 		"@expo/html-elements": "^0.10.1",
 		"@expo/vector-icons": "^14.1.0",
+		"@gluestack-ui/core": "^3.0.10",
+		"@gluestack-ui/utils": "^3.0.11",
 		"@heroui/date-input": "^2.3.21",
 		"@heroui/date-picker": "^2.3.22",
 		"@heroui/system": "2.4.18",
