--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
         "./*"
       ],
       "tailwind.config": [
-        "./tailwind.config.js"
+        "./tailwind.config.js",
+        "./tailwind.config.mjs"
       ]
     }
   },
