--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
 		"@babel/plugin-proposal-export-namespace-from": "^7.18.9",
 		"@clerk/clerk-expo": "^2.13.0",
 		"@expo/html-elements": "^0.10.1",
-		"@expo/vector-icons": "^14.1.0",
+		"@expo/vector-icons": "^15.0.3",
 		"@gluestack-ui/core": "^3.0.10",
 		"@gluestack-ui/utils": "^3.0.11",
 		"@heroui/date-input": "^2.3.21",
@@ -37,14 +37,15 @@
 		"@prisma/client": "^6.9.0",
 		"@prisma/extension-accelerate": "^2.0.1",
 		"@react-aria/i18n": "3.12.10",
-		"@react-native-async-storage/async-storage": "2.1.2",
-		"@react-native-community/datetimepicker": "8.4.1",
+		"@react-native-async-storage/async-storage": "2.2.0",
+		"@react-native-community/datetimepicker": "8.4.4",
 		"@react-native-community/masked-view": "^0.1.11",
 		"@react-navigation/bottom-tabs": "^7.3.10",
 		"@react-navigation/elements": "^2.3.8",
-		"@react-navigation/native": "^7.1.6",
+		"@react-navigation/native": "^7.1.8",
+		"@react-navigation/native-stack": "^7.3.16",
 		"@sentry/cli": "^2.46.0",
-		"@sentry/react-native": "~6.14.0",
+		"@sentry/react-native": "~7.2.0",
 		"@tanstack/react-query": "^5.83.0",
 		"axios": "^1.11.0",
 		"babel-plugin-module-resolver": "^5.0.2",
@@ -52,23 +53,23 @@
 		"date-fns-tz": "^3.2.0",
 		"dayjs": "^1.11.13",
 		"depcheck": "^1.4.7",
-		"expo": "^54.0.13",
-		"expo-auth-session": "^6.2.0",
-		"expo-blur": "~14.1.4",
-		"expo-constants": "~17.1.7",
-		"expo-dev-client": "~5.2.4",
-		"expo-font": "~13.3.1",
-		"expo-haptics": "~14.1.4",
-		"expo-image": "~2.4.0",
-		"expo-linking": "~7.1.5",
-		"expo-router": "~5.1.0",
-		"expo-secure-store": "~14.2.3",
-		"expo-splash-screen": "~0.30.8",
-		"expo-status-bar": "~2.2.3",
-		"expo-symbols": "~0.4.4",
-		"expo-system-ui": "~5.0.7",
-		"expo-updates": "~0.28.14",
-		"expo-web-browser": "~14.2.0",
+		"expo": "54.0.21",
+		"expo-auth-session": "~7.0.8",
+		"expo-blur": "~15.0.7",
+		"expo-constants": "~18.0.10",
+		"expo-dev-client": "~6.0.16",
+		"expo-font": "~14.0.9",
+		"expo-haptics": "~15.0.7",
+		"expo-image": "~3.0.10",
+		"expo-linking": "~8.0.8",
+		"expo-router": "~6.0.14",
+		"expo-secure-store": "~15.0.7",
+		"expo-splash-screen": "~31.0.10",
+		"expo-status-bar": "~3.0.8",
+		"expo-symbols": "~1.0.7",
+		"expo-system-ui": "~6.0.8",
+		"expo-updates": "~29.0.12",
+		"expo-web-browser": "~15.0.8",
 		"express": "^5.1.0",
 		"framer-motion": "12.19.2",
 		"http-status-codes": "^2.3.0",
@@ -77,24 +78,24 @@
 		"motion": "^12.19.2",
 		"nativewind": "^4.1.23",
 		"openai": "^6.5.0",
-		"react": "^19.2.0",
+		"react": "19.1.0",
 		"react-aria": "^3.33.0",
-		"react-dom": "^19.2.0",
+		"react-dom": "19.1.0",
 		"react-gesture-handler": "^0.0.5",
 		"react-hook-form": "^7.57.0",
-		"react-native": "^0.79.3",
+		"react-native": "0.81.5",
 		"react-native-css-interop": "^0.1.22",
 		"react-native-draggable": "^3.3.0",
-		"react-native-gesture-handler": "~2.24.0",
-		"react-native-pager-view": "6.7.1",
+		"react-native-gesture-handler": "~2.28.0",
+		"react-native-pager-view": "6.9.1",
 		"react-native-reanimated": "~4.1.0",
 		"react-native-safe-area-context": "^5.6.1",
-		"react-native-screens": "~4.11.1",
-		"react-native-svg": "^15.13.0",
+		"react-native-screens": "~4.16.0",
+		"react-native-svg": "15.12.1",
 		"react-native-url-polyfill": "^2.0.0",
-		"react-native-web": "~0.20.0",
-		"react-native-webview": "13.13.5",
-		"react-native-worklets": "^0.5.1",
+		"react-native-web": "^0.21.0",
+		"react-native-webview": "13.15.0",
+		"react-native-worklets": "0.5.1",
 		"react-stately": "^3.39.0",
 		"serverless-http": "^4.0.0",
 		"tailwind-variants": "^0.1.20",
@@ -107,10 +108,10 @@
 		"@types/express": "^5.0.3",
 		"@types/jest": "29.5.14",
 		"@types/luxon": "^3.6.2",
-		"@types/react": "~19.0.10",
+		"@types/react": "~19.1.10",
 		"dotenv-cli": "^10.0.0",
 		"jest": "~29.7.0",
-		"jest-expo": "~54.0.12",
+		"jest-expo": "~54.0.13",
 		"jscodeshift": "0.15.2",
 		"prisma": "^6.9.0",
 		"typescript": "^5.9.2"
