--- a/package.json
+++ b/package.json
@@ -26,8 +26,9 @@
 		"@clerk/clerk-expo": "^2.13.0",
 		"@expo/html-elements": "^0.10.1",
 		"@expo/vector-icons": "^15.0.3",
-		"@gluestack-ui/core": "^3.0.10",
-		"@gluestack-ui/utils": "^3.0.11",
+		"@gluestack-ui/core": "3.0.10",
+		"@gluestack-ui/utils": "3.0.11",
+		"@gluestack/ui-next-adapter": "3.0.3",
 		"@heroui/date-input": "^2.3.21",
 		"@heroui/date-picker": "^2.3.22",
 		"@heroui/system": "2.4.18",
@@ -76,7 +77,7 @@
 		"lucide-react-native": "^0.510.0",
 		"luxon": "^3.7.1",
 		"motion": "^12.19.2",
-		"nativewind": "^4.1.23",
+		"nativewind": "^4.2.1",
 		"openai": "^6.5.0",
 		"react": "19.1.0",
 		"react-aria": "^3.33.0",
@@ -88,10 +89,10 @@
 		"react-native-draggable": "^3.3.0",
 		"react-native-gesture-handler": "~2.28.0",
 		"react-native-pager-view": "6.9.1",
-		"react-native-reanimated": "~4.1.0",
-		"react-native-safe-area-context": "^5.6.1",
+		"react-native-reanimated": "~3.17.4",
+		"react-native-safe-area-context": "5.4.0",
 		"react-native-screens": "~4.16.0",
-		"react-native-svg": "15.12.1",
+		"react-native-svg": "15.13.0",
 		"react-native-url-polyfill": "^2.0.0",
 		"react-native-web": "^0.21.0",
 		"react-native-webview": "13.15.0",
@@ -113,6 +114,7 @@
 		"jest": "~29.7.0",
 		"jest-expo": "~54.0.13",
 		"jscodeshift": "0.15.2",
+		"prettier-plugin-tailwindcss": "^0.5.11",
 		"prisma": "^6.9.0",
 		"typescript": "^5.9.2"
 	},
