--- a/package.json
+++ b/package.json
@@ -54,11 +54,11 @@
 		"date-fns-tz": "^3.2.0",
 		"dayjs": "^1.11.13",
 		"depcheck": "^1.4.7",
-		"expo": "54.0.21",
+		"expo": "54.0.23",
 		"expo-auth-session": "~7.0.8",
 		"expo-blur": "~15.0.7",
 		"expo-constants": "~18.0.10",
-		"expo-dev-client": "~6.0.16",
+		"expo-dev-client": "~6.0.17",
 		"expo-font": "~14.0.9",
 		"expo-haptics": "~15.0.7",
 		"expo-image": "~3.0.10",
@@ -70,7 +70,7 @@
 		"expo-symbols": "~1.0.7",
 		"expo-system-ui": "~6.0.8",
 		"expo-updates": "~29.0.12",
-		"expo-web-browser": "~15.0.8",
+		"expo-web-browser": "~15.0.9",
 		"express": "^5.1.0",
 		"framer-motion": "12.19.2",
 		"http-status-codes": "^2.3.0",
@@ -89,10 +89,10 @@
 		"react-native-draggable": "^3.3.0",
 		"react-native-gesture-handler": "~2.28.0",
 		"react-native-pager-view": "6.9.1",
-		"react-native-reanimated": "~3.17.4",
-		"react-native-safe-area-context": "5.4.0",
+		"react-native-reanimated": "~4.1.1",
+		"react-native-safe-area-context": "~5.6.0",
 		"react-native-screens": "~4.16.0",
-		"react-native-svg": "15.13.0",
+		"react-native-svg": "15.12.1",
 		"react-native-url-polyfill": "^2.0.0",
 		"react-native-web": "^0.21.0",
 		"react-native-webview": "13.15.0",
@@ -128,6 +128,9 @@
 	"jest": {
 		"preset": "jest-expo"
 	},
+    "resolutions": {
+      "react": "19.1.0"
+    },
 	"private": true,
 	"proxy": "http://localhost:8081"
 }
