--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"@react-navigation/native-stack": "^7.3.16",
 		"@sentry/cli": "^2.46.0",
 		"@sentry/react-native": "~7.2.0",
+		"@tamagui/config": "^1.136.9",
 		"@tanstack/react-query": "^5.83.0",
 		"axios": "^1.11.0",
 		"babel-plugin-module-resolver": "^5.0.2",
@@ -100,7 +101,8 @@
 		"react-stately": "^3.39.0",
 		"serverless-http": "^4.0.0",
 		"tailwind-variants": "^0.1.20",
-		"tailwindcss": "^3.4.17"
+		"tailwindcss": "^3.4.17",
+		"tamagui": "^1.136.9"
 	},
 	"devDependencies": {
 		"@babel/core": "^7.25.2",
@@ -128,9 +130,9 @@
 	"jest": {
 		"preset": "jest-expo"
 	},
-    "resolutions": {
+	"resolutions": {
       "react": "19.1.0"
-    },
+	},
 	"private": true,
 	"proxy": "http://localhost:8081"
 }
