--- a/package.json
+++ b/package.json
@@ -86,9 +86,10 @@
 		"react-gesture-handler": "^0.0.5",
 		"react-hook-form": "^7.57.0",
 		"react-native": "0.81.5",
-		"react-native-css-interop": "^0.1.22",
+		"react-native-css-interop": "0.2.1",
 		"react-native-draggable": "^3.3.0",
 		"react-native-gesture-handler": "~2.28.0",
+		"react-native-modalize": "^2.1.1",
 		"react-native-pager-view": "6.9.1",
 		"react-native-reanimated": "~4.1.1",
 		"react-native-safe-area-context": "~5.6.0",
@@ -131,7 +132,7 @@
 		"preset": "jest-expo"
 	},
 	"resolutions": {
-        "react": "19.1.0"
+		"react": "19.1.0"
 	},
 	"private": true,
 	"proxy": "http://localhost:8081"
